# py-sdk

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_pypi.yaml
src/t2d2/: t2d2_api.py  t2d2lib.py
src/t2d2.py/: s3_api.py  t2d2_api.py
