[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "t2d2-sdk"
version = "0.0.3"
authors = [
  { name="Badri Hiriyur", email="badri@t2d2.ai" },
]
description = "T2D2 SDK"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/t2d2-ai/py-sdk"
"Bug Tracker" = "https://github.com/t2d2-ai/py-sdk/issues"